<resources>
    <string name="app_name">FirstGame</string>
    <string name="body1">body</string>
    <string name="caterpillar_head">caterpillar_head</string>
    <string name="board">Board</string>
    <string name="number">Number</string>
    <string name="owl">owl</string>
    <string name="stone">stone</string>
    <string name="star">Star</string>

    <string name="won">You Have Won</string>
    <string name="restart">Next</string>

    <string name="trophy">trophy</string>
    <string name="replay">replay</string>

    <string name="score_board_heading">Score Board</string>

</resources>