<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:background="@color/dialog_bg"
    >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/dialog_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/won"
            android:textStyle="bold"
            android:textSize="@dimen/_30sdp"
            android:textAlignment="center"
            android:textColor="@color/black" />

        <ImageView
            android:layout_width="@dimen/_80sdp"
            android:layout_height="@dimen/_80sdp"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="@dimen/_60sdp"
            android:src="@drawable/trophy"
            android:contentDescription="@string/trophy" />

        <ImageButton
            android:id="@+id/replay_btn"
            android:layout_width="@dimen/_130sdp"
            android:layout_height="@dimen/_130sdp"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="@dimen/_160sdp"
            android:backgroundTint="@color/dialog_bg"
            android:contentDescription="@string/restart"
            android:src="@drawable/gold_brown_btn"
            />


    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>